# KaudioLibrary

./: pyproject.toml  readme.md  setup.py
kaudio_library/: mic_engine.py
src/kaudio/: mic_engine.py
