[tool.poetry]
name = "kaudio_library"
version = "0.1.0"
description = ""
authors = ["Kan Kawabata <kkawabat@asu.edu>"]

[tool.poetry.dependencies]
python =  ">=3.8,<3.11"
pyaudio = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
